--- a/src/lama_demo/static/css/styles.css
+++ b/src/lama_demo/static/css/styles.css
@@ -98,16 +98,15 @@ button:disabled {
 
 canvas {
     margin-top: 20px;
+    border-radius: 10px;
     border: 2px solid #ddd;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    max-width: 100%;
+    max-width: 100%; 
     height: auto; /* Ensures the canvas scales with the container */
 }
 
 #loading-spinner {
-    color: #666;
-    font-size: 18px;
-    margin-top: 20px;
+    display: None;
 }
 
 #result-image {
